--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -8,17 +8,29 @@
 <form method="post">
         <input type="text" asp-for="NoviTurista.ImeTuriste" placeholder="Ime" required />
         <input type="text" asp-for="NoviTurista.PrezimeTuriste" placeholder="Prezime" required />
-        <input type="text" asp-for="NoviTurista.Pol" placeholder="Pol" required />
-        <label>Datum rodjenja <input type="date" asp-for="NoviTurista.DatumRodjenja" required /></label>
+        <label>Pol: 
+        <select asp-for="NoviTurista.Pol" placeholder="Pol" required>
+                <option value="" selected disabled hidden>Pol</option>
+                <option>Ž</option>
+                <option>M</option>
+        </select>
+        </label>
+        <label>Datum rođenja <input type="date" asp-for="NoviTurista.DatumRodjenja" required /></label>
         <input type="text" asp-for="NoviTurista.Email" placeholder="Email" required />
-        <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
+        <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisničko ime" required />
         <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
         <div style="margin: 5px;"><input type="submit" value="Registruj se"/> </div>
 
        	<div class="d-flex justify-content-center links">
-    			<div style="margin: 10px;">Imas nalog?<a href="/Prijava">Prijavi se</a></div>
+    			<div style="margin: 10px;">Imas nalog? <a href="/Prijava">Prijavi se</a></div>
 				</div>
      </form> 
      </div>
 </div>
+
+@if (Model.PostojiVec)
+{
+        <div class="alert alert-danger" role="alert" style="text-align: center;">Korisnik sa tim korisničkim imenom već postoji.</div> 
+}
+
 
