--- a/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodaj.cshtml
@@ -12,8 +12,13 @@
     <div class="dodaj">
         <div id="formContent">
             <label class="form-control">Naziv kviza:</label> <input asp-for="NoviKviz.NazivKviza" class="form-control" placeholder="Naziv kviza" />
-            <label class="form-control">Znamenitost:</label>    <select class="form-control" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+            <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
                                                                     <option value="">Bez znamenitosti</option>
+                                                                    <option value="" selected disabled hidden>Izaberite za koju znamenitost je vezan kviz.</option>
+                                                                </select>
+            <label class="form-control">Tura:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista">
+                                                                    <option value="">Bez ture</option>
+                                                                    <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                 </select>
             <button type="submit">Dodaj novi kviz</button>
         </div>
