--- a/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
@@ -44,7 +44,7 @@
         else
         {
           <label class="form-control select-fit-text">Datum odrzavanja:</label>
-          <div class="forma-check"><input type="date" asp-for="NovaRezervacija.Datum"/></div>
+          <div class="forma-check"><input type="date" asp-for="NovaRezervacija.Datum" required/></div>
         }
         
         <label>Vreme odrzavanja: <input type="time" asp-for="NovaTura.VremeOdrzavanja" required /></label>
