--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -27,8 +27,8 @@
         <div class="naziv-rezAnk">Naziv</div>
         <div class="vrednost-rezAnk">@Model.Tura.NazivTure</div>
                   
-        <div class="naziv-rezAnk">Dan održavanja</div>
-        <div class="vrednost-rezAnk">@Model.Tura.DanOdrzavanja</div>
+        <div class="naziv-rezAnk">Dani održavanja</div>
+        <div class="vrednost-rezAnk">@Model.DaniOdrzavanja</div>
 
         <div class="naziv-rezAnk">Vreme održavanja</div>
         <div class="vrednost-rezAnk">@Model.Tura.VremeOdrzavanja</div>
@@ -209,7 +209,7 @@
       <h6 class="m-0 font-weight-bold text-primary">Znamenitosti u turi</h6>
     </div>
     <div class="card-body">
-        <div  style="width: 1000px; overflow-x: auto; white-space: nowrap; ">
+		<div  style="width: 1000px; overflow-x: auto; white-space: nowrap; ">
         @foreach (var znamenitosti in Model.ZnamenitostiUTuri)
         {
           <a asp-page="./ZnamenitostJedna" asp-route-id="@znamenitosti.IdZnamenitosti">   
