--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
@@ -8,9 +8,12 @@
     <h1 class="display-4">Izmena kviza: @Model.OvajKviz.NazivKviza</h1>
 </div>
 
-<div class="text-left">
-    <h3><a asp-page="./KvizSvi">Prikaži listu svih kvizova</a></h3>
-</div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizSvi">Prikazi listu kvizova</a></li>
+  </ul>
+</nav>
 
 <form method="post">
     <div class="izmeni">
@@ -18,8 +21,13 @@
             <input type="hidden" asp-for="KvizId" />
             <input type="hidden" asp-for="SessionId" />
             <label class="form-control">Naziv kviza:</label> <input asp-for="OvajKviz.NazivKviza" class="form-control" placeholder="OvajKviz.Naziv kviza" />
-            <label class="form-control">Znamenitost:</label>    <select class="form-control" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+            <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
                                                                     <option value="">Bez znamenitosti</option>
+                                                                    <option value="" selected disabled hidden>Izaberite za koju znamenitost je vezan kviz.</option>
+                                                                </select>
+             <label class="form-control">Tura:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista">
+                                                                    <option value="">Bez ture</option>
+                                                                    <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                 </select>
 
             <button type="submit">Izmeni kviz</button>
