--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
@@ -8,9 +8,11 @@
     <h1 class="display-4">Izmena pitanja u kvizu: @Model.OvoPitanje.IdKvizaNavigation.NazivKviza</h1>
 </div>
 
-<div class="text-left">
-    <h3><a asp-page="./KvizJedan" asp-route-id="@Model.KvizId">Vrati se na prikaz kviza</a></h3>
-</div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizJedan" asp-route-id="@Model.KvizId">Vrati se na prikaz kviza</a></li>
+  </ul>
+</nav>
 
 <form method=post>
     <div class="izmeni">
