--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -7,6 +7,14 @@
 <div class="text-center">
     <h2 class="display-4">Izmena ture: @Model.OvaTura.NazivTure</h2>
 </div>
+
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
+  </ul>
+</nav>
+
 @if(SessionClass.TipKorisnika=="A")
 {
 <form method="post">
