--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
@@ -7,6 +7,13 @@ ViewData["Title"]="Izmena znamenitosti";
 <div class="text-center">
     <h1 class="display-4">@Model.TrenutnaZnamenitost.NazivZnamenitosti</h1>
 </div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve">Prikazi listu znamenitosti</a></li>
+  </ul>
+</nav>
+
 @if(SessionClass.TipKorisnika=="A")
 {
 <form method="post">
@@ -15,7 +22,7 @@ ViewData["Title"]="Izmena znamenitosti";
         <input type="hidden" asp-for="ZnamenitostId"/>
         <label class="form-control">Naziv: </label> <input asp-for="TrenutnaZnamenitost.NazivZnamenitosti" class="form-control" />
         <label class="form-control">Lokacija:</label> <input asp-for="TrenutnaZnamenitost.Lokacija" class="form-control" />
-        <label class="form-control">Opis:</label> <input asp-for="TrenutnaZnamenitost.Opis" class="form-control" />
+        <label class="form-control">Opis:</label> <textarea class="form-control text-area-fit" asp-for="TrenutnaZnamenitost.Opis"></textarea> 
         <label class="form-control">Radno vreme:</label> <input asp-for="TrenutnaZnamenitost.RadnoVreme" class="form-control" />
         <label class="form-control">Broj telefona:</label> <input asp-for="TrenutnaZnamenitost.BrojTelefona" class="form-control" />
         <label class="form-control">Cena ulaznice:</label> <input asp-for="TrenutnaZnamenitost.CenaUlaznice" class="form-control" />
