--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -218,7 +218,9 @@ input[type=text]:placeholder
 .cardVodic {
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
   transition: 0.8s;
-  width:400px; height:600px; margin: auto;
+  width: 40%;
+  min-height: 100%;
+  margin: auto;
 }
 
 .cardVodic:hover {
