--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -42,6 +42,7 @@ ViewData["Title"]="Ture";
               {
                 <div><a asp-page="./TuraIzmeni" asp-route-id="@tura.IdTure">Izmeni turu</a></div>
 				<div><a asp-page="./TuraObrisi"  asp-route-id="@tura.IdTure">Obrisi turu</a></div>
+                <div><a asp-page="./TuraKomentari"  asp-route-id="@tura.IdTure">Prikazi komentare</a></div>
               }
             </div>
         </div>
