--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -287,17 +287,6 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
   align-items:center;
 }
 
-.kvizUradi
-{
-  position: relative;
-	width: 450px;
-	padding: 50px;
-	margin: 0 auto;
-	background-color: #fff;
-	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
-}
 /*mozda ne radi u svim verzijama nekih browsera?*/
 .disabledKviz {
   pointer-events: none;
@@ -679,6 +668,37 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
   font-weight: 700;
   color: #5a5c69;
   font-size: 1rem;
+} 
+
+.vrednost{
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  margin-bottom: 0;
+  margin-right: 1rem;
+  font-weight: 700;
+  color: #5a5c69;
+  font-size: 1rem;
+} 
+
+.naziv{
+  font-size: 1rem;
+  font-weight: 700;
+  color: #36b9cc;
+  text-transform: uppercase;
+  margin-bottom: 0.25rem;
+}
+
+/*Forma za kviz anketu i komentare*/
+.formaKAK
+{
+  position: relative;
+	width: 450px;
+	padding: 50px;
+	margin: 0 auto;
+	background-color: #fff;
+	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
 } 
 
 
