--- a/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
@@ -6,21 +6,25 @@
 
 @if(SessionClass.TipKorisnika=="A")
 {
-<div class="brisi-ture fadeInDown">
-<div id="formContent">
 <form method="post">
-
-
+@if(@Model.provera==0)
+{
+  <div class="brisi-ture fadeInDown">
+  <div id="formContent">
     <label class="form-control select-fit-text" >
             <h5>Da li ste sigurni da želite da obrišete sledeću turu: @Model.TuraZaBrisanje.NazivTure ?</h5>
     </label>
 
     <button type="submit" class="btn btn-danger">Da</button>
     <a asp-page="./TuraSve" >Ne</a>
-
+  </div>
+  </div> 
+}
+else
+{
+  <div class="alert alert-danger" role="alert" style="text-align: center;">Ne možete da obrisete turu koja je rezervisana</div> 
+}
 </form>
-</div>
-</div>
 }
 else{
   <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da obrise turu</div> 
