--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -7,6 +7,13 @@ ViewData["Title"]="Nova znamenitost";
 <div class="text-center">
     <h2 class="display 4">Nova znamenitost</h2>
 </div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve">Vrati se nazad</a></li>
+  </ul>
+</nav>
+
    @if(SessionClass.TipKorisnika=="A"){
 <form method="post">
     <div class="dodaj">
