--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -20,10 +20,10 @@ ViewData["Title"]="Znamenitosti";
 
 <form method="post">
 <div>  
-<select class="js-example-basic-single js-states form-control" asp-for="IzabraniTip" asp-items="Model.SviTipovi">
-  <option>Prikazi sve</option>
+<select class="js-example-basic-single js-states form-control select-fit-text" asp-for="IzabraniTip" asp-items="Model.SviTipovi" >
+  <option >Prikaži sve</option>
 </select>
-<button type="submit">Prikazi</button>
+<button type="submit">Prikaži</button>
 </div>
 
 <div class="row">
