--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSlika.cshtml
@@ -4,11 +4,20 @@
 ViewData["Title"]="Izmena znamenitosti";
 }
 
+<div class="text-center">
+    <h1 class="display-4">@Model.TrenutnaZnamenitost.NazivZnamenitosti</h1>
+</div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve">Prikazi listu znamenitosti</a></li>
+  </ul>
+</nav>
 
 @if(SessionClass.TipKorisnika=="A")
 {
 <form method="post">
-    <div class="dodaj">
+    <div class="prijava">
         <div id="formContent">
          <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaSlika.Slika"  placeholder="Slika" required />
          <button type="submit">Dodaj Sliku</button>
