--- a/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
@@ -4,35 +4,50 @@
     ViewData["Title"] = "Rezervisi turu";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Rezervacija za turu: @Model.OvaTura.NazivTure</h1>
-    <h5>Ova tura se održava danima: @Model.DaniOdrzavanja</h5>
-</div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Vrati se nazad</a></li>
+  </ul>
+</nav>
 
-<div class="rezervacija fadeInDown">
-<div id="formContent">
-<form method="post">
+@if (!Model.NeispravnaTura)
+{
+    <div class="text-center">
+        <h1 class="display-4">Rezervacija za turu: @Model.OvaTura.NazivTure</h1>
+        <h5>Ova tura se održava danima: @Model.DaniOdrzavanja</h5>
+    </div>
 
-    <input type="hidden" asp-for="@Model.KapacitetTure" />
-    <input type="hidden" asp-for="@Model.TuraId" />
-    <input type="hidden" asp-for="@Model.NeuspesnaRezervacija" />
-    <input type="hidden" asp-for="@Model.NetacnaRezervacija" />
+    <div class="rezervacija fadeInDown">
+        <div id="formContent">
+            <form method="post">
 
-    <label class="form-control select-fit-text">Datum odrzavanja:</label>
-        <input type="date" min="@Model.DanasnjiDatum" asp-for="RezervacijaTure.Datum" class="form-control" placeholder="Datum odrzavanja"  required/>
+                <input type="hidden" asp-for="@Model.KapacitetTure" />
+                <input type="hidden" asp-for="@Model.TuraId" />
+                <input type="hidden" asp-for="@Model.NeuspesnaRezervacija" />
+                <input type="hidden" asp-for="@Model.NetacnaRezervacija" />
 
-    <label class="form-control">Broj osoba:</label>
-        <input asp-for="RezervacijaTure.BrojOsoba" class="form-control" min="1"; max="100"; placeholder="Broj osoba" required  />
+                <label class="form-control select-fit-text">Datum odrzavanja:</label>
+                    <input type="date" min="@Model.DanasnjiDatum" 
+                        max="@Model.NajkasnijiDatum" asp-for="RezervacijaTure.Datum" class="form-control" placeholder="Datum odrzavanja"  required/>
+
+                <label class="form-control">Broj osoba:</label>
+                    <input asp-for="RezervacijaTure.BrojOsoba" class="form-control" min="1"; max="100"; placeholder="Broj osoba" required  />
 
         
 
-     <div>
-        <button type="submit">Rezervisi turu</button>
-    </div>
+                <div>
+                    <button type="submit">Rezerviši turu</button>
+                </div>
     
-</form>
-</div>
-</div>
+            </form>
+        </div>
+    </div>
+}
+else{
+        <div class="alert alert-danger" role="alert" style="text-align: center;">Ova tura još uvek nema dodate dane održavanja. Možete rezervisati neku od drugih tura.</div>   
+}
+
+
 
 @if(Model.NetacnaRezervacija!=null && Model.NetacnaRezervacija != 0)
 {
