--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -33,6 +33,7 @@
     @if(SessionClass.TipKorisnika=="A")
     {
    <div><a asp-page="./VodicObrisi"  asp-route-id="@vodic.IdVodica">Obriši vodiča <i class='fas fa-user-alt-slash'></i></a></div> 
+    <div><a asp-page="./VodicIzmeni" asp-route-id="@vodic.IdVodica">Izmeni nalog vodiču</a></div>
     }
     </div>
   </div>
